<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="gameViewModel"
            type="com.adpioro.rainbowgame.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="6dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/points"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instruction">

            <TextView
                android:id="@+id/red_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="#fd3024"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Points:" />

            <TextView
                android:id="@+id/orange_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="#ffb600"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/red_points"
                tools:text="Points: " />

            <TextView
                android:id="@+id/yellow_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="#fff51e"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orange_points"
                tools:text="Points: " />

            <TextView
                android:id="@+id/green_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="#139e91"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yellow_points"
                tools:text="Points: " />

            <TextView
                android:id="@+id/blue_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="#5677fc"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/green_points"
                tools:text="Points: " />

            <TextView
                android:id="@+id/violet_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#842dcf"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/blue_points"
                tools:text="Points: " />

        </LinearLayout>

        <Button
            android:id="@+id/red_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:backgroundTint="#fd3024"
            android:text="@string/red"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/red_idle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/orange_button"
            app:layout_constraintTop_toBottomOf="@id/points" />

        <Button
            android:id="@+id/orange_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:backgroundTint="#ffb600"
            android:text="@string/orange"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/orange_idle"
            app:layout_constraintLeft_toRightOf="@id/red_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/points" />

        <TextView
            android:id="@+id/red_idle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/yellow_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/orange_idle"
            app:layout_constraintTop_toBottomOf="@id/red_button"
            tools:text="Idle: 10" />

        <TextView
            android:id="@+id/orange_idle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/green_button"
            app:layout_constraintLeft_toRightOf="@id/red_idle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orange_button"
            tools:text="Idle: 10" />

        <Button
            android:id="@+id/yellow_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:backgroundTint="#fff51e"
            android:text="@string/yellow"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/yellow_idle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/green_button"
            app:layout_constraintTop_toBottomOf="@id/red_idle" />

        <Button
            android:id="@+id/green_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:backgroundTint="#139e91"
            android:text="@string/green"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/green_idle"
            app:layout_constraintLeft_toRightOf="@id/yellow_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orange_idle" />

        <TextView
            android:id="@+id/yellow_idle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/blue_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/green_idle"
            app:layout_constraintTop_toBottomOf="@id/yellow_button"
            tools:text="Idle: 10" />

        <TextView
            android:id="@+id/green_idle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/violet_button"
            app:layout_constraintLeft_toRightOf="@id/yellow_idle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/green_button"
            tools:text="Idle: 10" />


        <Button
            android:id="@+id/blue_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:backgroundTint="#5677fc"
            android:text="@string/blue"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/blue_idle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/violet_button"
            app:layout_constraintTop_toBottomOf="@id/yellow_idle" />

        <Button
            android:id="@+id/violet_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:backgroundTint="#842dce"
            android:text="@string/violet"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/violet_idle"
            app:layout_constraintLeft_toRightOf="@id/blue_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/green_idle" />

        <TextView
            android:id="@+id/blue_idle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/violet_idle"
            app:layout_constraintTop_toBottomOf="@id/blue_button"
            tools:text="Idle: 10" />

        <TextView
            android:id="@+id/violet_idle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/blue_idle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/violet_button"
            tools:text="Idle: 10" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>